--- a/members-new.html
+++ b/members-new.html
@@ -1498,12 +1498,12 @@
                 
                 <div class="pathways-stats">
                     <div class="stat-card">
-                        <span class="stat-number">6</span>
+                        <span class="stat-number">9</span>
                         <div class="stat-label">Sacred Pathways</div>
                     </div>
                     <div class="stat-card">
-                        <span class="stat-number">18+</span>
-                        <div class="stat-label">Divine Exercises</div>
+                        <span class="stat-number">30+</span>
+                        <div class="stat-label">Divine Tools</div>
                     </div>
                     <div class="stat-card">
                         <span class="stat-number">∞</span>
@@ -1576,18 +1576,74 @@
                 </div>
 
                 <div class="nav-card" onclick="showSectionWithLoading('spiritual-tools')">
-                    <div class="recommended-badge">🌟 START HERE</div>
+                    <div class="recommended-badge">🌟 LEGACY</div>
                     <span class="nav-icon">🧘</span>
                     <h3 class="nav-title">Spiritual Tools</h3>
                     <p class="nav-description">
-                        Essential daily practices for spiritual growth and divine connection.
+                        Legacy collection - individual tools have been moved to specialized sections.
                     </p>
                     <div class="nav-features">
-                        <span class="feature-tag">Meditation Center</span>
-                        <span class="feature-tag">Energy Healing</span>
-                        <span class="feature-tag">Sacred Sound</span>
+                        <span class="feature-tag">Tool Overview</span>
+                        <span class="feature-tag">Quick Access</span>
+                        <span class="feature-tag">Legacy Interface</span>
                     </div>
-                    <div class="status-badge">✅ 7 Tools Ready</div>
+                    <div class="status-badge">📦 Legacy Format</div>
+                </div>
+
+                <div class="nav-card" onclick="showSectionWithLoading('meditation-mindfulness')">
+                    <span class="nav-icon">🧘</span>
+                    <h3 class="nav-title">Meditation & Mindfulness</h3>
+                    <p class="nav-description">
+                        Find peace and inner wisdom through guided meditation and mindfulness practices.
+                    </p>
+                    <div class="nav-features">
+                        <span class="feature-tag">Guided Meditation</span>
+                        <span class="feature-tag">Breathing Exercises</span>
+                        <span class="feature-tag">Chakra Work</span>
+                    </div>
+                    <div class="status-badge">✅ 6 Practices Ready</div>
+                </div>
+
+                <div class="nav-card" onclick="showSectionWithLoading('energy-healing')">
+                    <span class="nav-icon">⚡</span>
+                    <h3 class="nav-title">Energy & Healing</h3>
+                    <p class="nav-description">
+                        Balance your energy centers and activate your natural healing abilities.
+                    </p>
+                    <div class="nav-features">
+                        <span class="feature-tag">Chakra Balancing</span>
+                        <span class="feature-tag">Aura Cleansing</span>
+                        <span class="feature-tag">Crystal Healing</span>
+                    </div>
+                    <div class="status-badge">✅ 6 Modalities Ready</div>
+                </div>
+
+                <div class="nav-card" onclick="showSectionWithLoading('sacred-arts-sound')">
+                    <span class="nav-icon">🎨</span>
+                    <h3 class="nav-title">Sacred Arts & Sound</h3>
+                    <p class="nav-description">
+                        Express your soul through divine creativity and healing vibrations.
+                    </p>
+                    <div class="nav-features">
+                        <span class="feature-tag">Mystic Arts Studio</span>
+                        <span class="feature-tag">Sound Healing</span>
+                        <span class="feature-tag">Creative Expression</span>
+                    </div>
+                    <div class="status-badge">✅ 6 Tools Ready</div>
+                </div>
+
+                <div class="nav-card" onclick="showSectionWithLoading('devotion-growth')">
+                    <span class="nav-icon">🙏</span>
+                    <h3 class="nav-title">Devotion & Growth</h3>
+                    <p class="nav-description">
+                        Cultivate your sacred practice and spiritual development journey.
+                    </p>
+                    <div class="nav-features">
+                        <span class="feature-tag">Daily Devotions</span>
+                        <span class="feature-tag">Spiritual Journal</span>
+                        <span class="feature-tag">Growth Tracker</span>
+                    </div>
+                    <div class="status-badge">✅ 6 Practices Ready</div>
                 </div>
 
                 <div class="nav-card" onclick="showSection('sacred-knowledge')">
@@ -1644,16 +1700,16 @@
                     <div class="status-badge">✅ Calendar System Ready</div>
                 </div>
 
-                <div class="nav-card" onclick="showSection('advanced-practices')">
-                    <span class="nav-icon">✨</span>
+                <div class="nav-card" onclick="showSectionWithLoading('advanced-practices')">
+                    <span class="nav-icon">🌑</span>
                     <h3 class="nav-title">Advanced Practices</h3>
                     <p class="nav-description">
-                        Master-level spiritual techniques for advanced practitioners.
+                        Master-level spiritual techniques for profound transformation.
                     </p>
                     <div class="nav-features">
-                        <span class="feature-tag">Mystic Arts</span>
-                        <span class="feature-tag">Light Language</span>
-                        <span class="feature-tag">Sacred Geometry</span>
+                        <span class="feature-tag">Shadow Integration</span>
+                        <span class="feature-tag">Consciousness Expansion</span>
+                        <span class="feature-tag">Energy Mastery</span>
                     </div>
                     <div class="status-badge">✅ 6 Practices Ready</div>
                 </div>
@@ -2263,21 +2319,31 @@ Body Overflow: ${document.body.style.overflow}
         }
 
         const sectionMap = {
+            'oracle-divination': 'sections/oracle-divination.html',
+            'meditation-mindfulness': 'sections/meditation-mindfulness.html',
+            'energy-healing': 'sections/energy-healing.html',
+            'sacred-arts-sound': 'sections/sacred-arts-sound.html',
+            'devotion-growth': 'sections/devotion-growth.html',
+            'advanced-practices': 'sections/advanced-practices.html',
             'spiritual-tools': 'sections/spiritual-tools.html',
             'sacred-knowledge': 'sections/sacred-knowledge.html',
             'personal-growth': 'sections/personal-growth.html',
             'community': 'sections/community.html',
-            'calendar': 'sections/calendar.html',
-            'advanced-practices': 'sections/advanced-practices.html'
+            'calendar': 'sections/calendar.html'
         };
 
         const sectionTitles = {
+            'oracle-divination': 'Oracle & Divination',
+            'meditation-mindfulness': 'Meditation & Mindfulness',
+            'energy-healing': 'Energy & Healing',
+            'sacred-arts-sound': 'Sacred Arts & Sound',
+            'devotion-growth': 'Devotion & Growth',
+            'advanced-practices': 'Advanced Practices',
             'spiritual-tools': 'Spiritual Tools & Practices',
             'sacred-knowledge': 'Sacred Knowledge & Wisdom',
             'personal-growth': 'Personal Growth & Development',
             'community': 'Community & Service',
-            'calendar': 'Sacred Calendar System',
-            'advanced-practices': 'Advanced Spiritual Practices'
+            'calendar': 'Sacred Calendar System'
         };
 
         function showSection(sectionId) {
