--- a/sections/advanced-practices.html
+++ b/sections/advanced-practices.html
@@ -1221,6 +1221,25 @@
             }
         `;
         document.head.appendChild(style);
+
+        // Advanced Practices Function Validation
+        document.addEventListener('DOMContentLoaded', () => {
+            const requiredFunctions = [
+                'setActiveTab', 'loadTabContent', 'startPractice', 'endPractice',
+                'trackProgress', 'saveSession', 'loadUserProgress'
+            ];
+            
+            if (window.DivineTemplateUtils) {
+                window.DivineTemplateUtils.validateSectionFunctions('Advanced Practices', requiredFunctions);
+                window.DivineTemplateUtils.initializeSectionListeners('Advanced Practices');
+                window.DivineTemplateUtils.trackSectionPerformance('Advanced Practices');
+            } else {
+                console.log('⚡ Advanced Practices loaded (validation script not found)');
+            }
+        });
     </script>
+
+    <!-- Load universal validation script -->
+    <script src="../js/section-validation.js" defer></script>
 </body>
 </html>
