--- a/sections/calendar.html
+++ b/sections/calendar.html
@@ -386,6 +386,22 @@
             }
         `;
         document.head.appendChild(style);
+
+        // Calendar Function Validation
+        document.addEventListener('DOMContentLoaded', () => {
+            const requiredFunctions = [];
+            
+            if (window.DivineTemplateUtils) {
+                window.DivineTemplateUtils.validateSectionFunctions('Sacred Calendar', requiredFunctions);
+                window.DivineTemplateUtils.initializeSectionListeners('Sacred Calendar');
+                window.DivineTemplateUtils.trackSectionPerformance('Sacred Calendar');
+            } else {
+                console.log('📅 Sacred Calendar loaded (validation script not found)');
+            }
+        });
     </script>
+
+    <!-- Load universal validation script -->
+    <script src="../js/section-validation.js" defer></script>
 </body>
 </html>
