--- a/sections/personal-growth.html
+++ b/sections/personal-growth.html
@@ -1378,6 +1378,25 @@
             }
         `;
         document.head.appendChild(style);
+
+        // Personal Growth Function Validation
+        document.addEventListener('DOMContentLoaded', () => {
+            const requiredFunctions = [
+                'loadTabContent', 'setActiveTab', 'addGoal', 'updateGoal', 
+                'deleteGoal', 'renderGoals', 'addHabit', 'renderHabits'
+            ];
+            
+            if (window.DivineTemplateUtils) {
+                window.DivineTemplateUtils.validateSectionFunctions('Personal Growth', requiredFunctions);
+                window.DivineTemplateUtils.initializeSectionListeners('Personal Growth');
+                window.DivineTemplateUtils.trackSectionPerformance('Personal Growth');
+            } else {
+                console.log('🌱 Personal Growth loaded (validation script not found)');
+            }
+        });
     </script>
+
+    <!-- Load universal validation script -->
+    <script src="../js/section-validation.js" defer></script>
 </body>
 </html>
