--- a/sections/sacred-arts-sound.html
+++ b/sections/sacred-arts-sound.html
@@ -1935,7 +1935,24 @@
         // Performance tracking
         window.addEventListener('load', () => {
             console.log('🎨 Sacred Arts & Sound loaded successfully');
+            
+            // Sacred Arts & Sound Function Validation
+            const requiredFunctions = [
+                'startSession', 'closeSession', 'setActiveTab', 'loadTabContent',
+                'playSound', 'pauseSound', 'generateFrequency', 'loadSacredGeometry'
+            ];
+            
+            if (window.DivineTemplateUtils) {
+                window.DivineTemplateUtils.validateSectionFunctions('Sacred Arts & Sound', requiredFunctions);
+                window.DivineTemplateUtils.initializeSectionListeners('Sacred Arts & Sound');
+                window.DivineTemplateUtils.trackSectionPerformance('Sacred Arts & Sound');
+            } else {
+                console.log('🎨 Sacred Arts & Sound validation script not found');
+            }
         });
     </script>
+
+    <!-- Load universal validation script -->
+    <script src="../js/section-validation.js" defer></script>
 </body>
 </html>
