--- a/sections/sacred-knowledge.html
+++ b/sections/sacred-knowledge.html
@@ -1026,6 +1026,24 @@
                 </div>
             `).join('');
         }
+
+        // Sacred Knowledge Function Validation
+        document.addEventListener('DOMContentLoaded', () => {
+            const requiredFunctions = [
+                'loadTabContent', 'setActiveTab', 'addDreamEntry', 'renderDreamEntries'
+            ];
+            
+            if (window.DivineTemplateUtils) {
+                window.DivineTemplateUtils.validateSectionFunctions('Sacred Knowledge', requiredFunctions);
+                window.DivineTemplateUtils.initializeSectionListeners('Sacred Knowledge');
+                window.DivineTemplateUtils.trackSectionPerformance('Sacred Knowledge');
+            } else {
+                console.log('📚 Sacred Knowledge loaded (validation script not found)');
+            }
+        });
     </script>
+
+    <!-- Load universal validation script -->
+    <script src="../js/section-validation.js" defer></script>
 </body>
 </html>
