oracle card ready

--- a/members-new.html
+++ b/members-new.html
@@ -455,7 +455,7 @@
             <h3 class="section-title">Choose Your Sacred Path</h3>
             <div class="nav-grid">
                 <!-- Oracle & Divination -->
-                <a href="oracle-divination.html" class="nav-card">
+                <div class="nav-card" onclick="showSectionWithLoading('oracle-divination')">
                     <span class="nav-icon">🔮</span>
                     <h4 class="nav-title">Oracle & Divination</h4>
                     <p class="nav-description">
@@ -466,10 +466,10 @@
                         <span class="feature-tag">Tarot</span>
                         <span class="feature-tag">Runes</span>
                     </div>
-                </a>
+                </div>
 
                 <!-- Spiritual Practices -->
-                <a href="spiritual-practices.html" class="nav-card">
+                <div class="nav-card" onclick="showSectionWithLoading('spiritual-tools')">
                     <span class="nav-icon">🧘</span>
                     <h4 class="nav-title">Spiritual Practices</h4>
                     <p class="nav-description">
@@ -480,7 +480,7 @@
                         <span class="feature-tag">Energy Healing</span>
                         <span class="feature-tag">Sacred Arts</span>
                     </div>
-                </a>
+                </div>
 
                 <div class="nav-card" onclick="showSectionWithLoading('meditation-mindfulness')">
                     <span class="nav-icon">🧘</span>
@@ -565,44 +565,33 @@
                     <div class="status-badge">✅ 3 Features Ready</div>
                 </div>
 
+                <div class="nav-card" onclick="showSectionWithLoading('community')">
+                    <span class="nav-icon">🤝</span>
+                    <h3 class="nav-title">Community & Service</h3>
+                    <p class="nav-description">
+                        Connect with fellow practitioners and contribute to sacred service.
+                    </p>
+                    <div class="nav-features">
+                        <span class="feature-tag">Sacred Circle</span>
+                        <span class="feature-tag">Community Hub</span>
+                        <span class="feature-tag">Service Projects</span>
+                    </div>
+                    <div class="status-badge">✅ 3 Features Ready</div>
+                </div>
+
                 <div class="nav-card" onclick="showSectionWithLoading('calendar')">
                     <span class="nav-icon">📅</span>
                     <h3 class="nav-title">Sacred Calendar</h3>
-=======
-                <!-- Community -->
-                <a href="community.html" class="nav-card">
-                    <span class="nav-icon">🤝</span>
-                    <h4 class="nav-title">Community</h4>
->>>>>>> 5f9068c0faceac261926d9460db114ca5278dd7f
                     <p class="nav-description">
-<<<<<<< HEAD
                         Track celestial events, moon phases, and optimal times for spiritual practice.
-=======
-                        Connect with fellow seekers, join healing circles, and share your journey.
->>>>>>> 5f9068c0faceac261926d9460db114ca5278dd7f
                     </p>
                     <div class="nav-features">
-<<<<<<< HEAD
                         <span class="feature-tag">Moon Phases</span>
                         <span class="feature-tag">Celestial Events</span>
                         <span class="feature-tag">Sacred Timing</span>
-=======
-                        <span class="feature-tag">Healing Circles</span>
-                        <span class="feature-tag">Forums</span>
-                        <span class="feature-tag">Events</span>
->>>>>>> 5f9068c0faceac261926d9460db114ca5278dd7f
                     </div>
-<<<<<<< HEAD
                     <div class="status-badge">✅ 3 Features Ready</div>
                 </div>
-=======
-                </a>
-
-                <!-- Sacred Calendar -->
-                <a href="sacred-calendar.html" class="nav-card">
->>>>>>> 5f9068c0faceac261926d9460db114ca5278dd7f
-                    <span class="nav-icon">📅</span>
-                    <h4 class="nav-title">Sacred Calendar</h4>
                     <p class="nav-description">
                         Enoch Calendar system with Hebrew months and daily devotional tracking.
                     </p>
