--- a/members-new.html
+++ b/members-new.html
@@ -379,6 +379,119 @@
             color: var(--primary-gold);
         }
 
+        /* Section Container Styles */
+        #section-container {
+            min-height: 100vh;
+            background: var(--dark-bg);
+            position: relative;
+        }
+
+        .section-header {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid var(--glass-border);
+            padding: 1.5rem 2rem;
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        .back-btn {
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid var(--glass-border);
+            color: var(--text-primary);
+            padding: 0.8rem 1.5rem;
+            border-radius: 15px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-size: 0.9rem;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .back-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateX(-5px);
+        }
+
+        .section-title {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.8rem;
+            color: var(--accent-gold);
+            margin: 0;
+        }
+
+        .section-frame {
+            width: 100%;
+            height: calc(100vh - 80px);
+            border: none;
+            background: var(--dark-bg);
+        }
+
+        /* Loading Overlay Styles */
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 10000;
+            backdrop-filter: blur(10px);
+        }
+
+        .loading-spinner {
+            width: 50px;
+            height: 50px;
+            border: 4px solid rgba(212, 175, 55, 0.3);
+            border-top: 4px solid var(--accent-gold);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin-bottom: 1rem;
+        }
+
+        .loading-text {
+            color: var(--accent-gold);
+            font-size: 1.2rem;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        .loading-progress {
+            width: 300px;
+            height: 4px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 2px;
+            overflow: hidden;
+        }
+
+        .loading-progress-bar {
+            height: 100%;
+            background: linear-gradient(90deg, var(--accent-purple), var(--accent-gold));
+            width: 0%;
+            transition: width 0.3s ease;
+        }
+
+        .progress-text {
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 0.9rem;
+            margin-top: 1rem;
+            text-align: center;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
         /* Responsive */
         @media (max-width: 768px) {
             .nav-grid {
@@ -392,6 +505,17 @@
             .header-content {
                 flex-direction: column;
                 gap: 1rem;
+            }
+
+            .section-header {
+                padding: 1rem;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 1rem;
+            }
+
+            .section-frame {
+                height: calc(100vh - 120px);
             }
         }
     </style>
@@ -605,6 +729,15 @@
         </section>
     </div>
 
+    <!-- Section Container for Loading External Pages -->
+    <div id="section-container" style="display: none;">
+        <div class="section-header">
+            <button onclick="showDashboard()" class="back-btn">← Back to Temple</button>
+            <h2 id="section-title" class="section-title"></h2>
+        </div>
+        <iframe id="section-frame" class="section-frame" src=""></iframe>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <p class="footer-text">Divine Temple • Eden Consciousness</p>
@@ -777,7 +910,7 @@
         }
 
         window.addEventListener('message', function(event) {
-            if (event.data === 'backToDashboard') {
+            if (event.data === 'backToDashboard' || event.data === 'back') {
                 showDashboard();
             }
         });
