--- a/sections/oracle-divination.html
+++ b/sections/oracle-divination.html
@@ -821,28 +821,32 @@
 
         .card-deck {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-            gap: 1.5rem;
+            grid-template-columns: repeat(auto-fill, minmax(160px, 200px));
+            gap: 2rem;
             margin: 3rem 0;
-            max-width: 1000px;
+            max-width: 1200px;
             margin-left: auto;
             margin-right: auto;
-            padding: 2rem;
+            padding: 3rem;
             background: rgba(255, 255, 255, 0.02);
             border-radius: 20px;
             border: 1px solid var(--glass-border);
+            justify-content: center;
         }
 
         .oracle-card-back {
             aspect-ratio: 2/3;
             background: linear-gradient(135deg, var(--accent-purple), var(--accent-gold));
-            border-radius: 15px;
+            border-radius: 20px;
             cursor: pointer;
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
-            border: 2px solid var(--glass-border);
-            min-height: 120px;
+            border: 3px solid var(--glass-border);
+            min-height: 240px;
+            width: 100%;
+            max-width: 200px;
+            margin: 0 auto;
         }
 
         .oracle-card-back:hover {
@@ -861,15 +865,17 @@
         }
 
         .card-symbol {
-            font-size: 2.5rem;
-            margin-bottom: 0.5rem;
+            font-size: 3.5rem;
+            margin-bottom: 1rem;
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
         }
 
         .card-pattern {
-            width: 25px;
-            height: 25px;
-            border: 2px solid rgba(255, 255, 255, 0.5);
+            width: 35px;
+            height: 35px;
+            border: 3px solid rgba(255, 255, 255, 0.6);
             border-radius: 50%;
+            margin-top: 0.5rem;
         }
 
         .oracle-card-back.selected {
@@ -912,20 +918,22 @@
         }
 
         .selection-number {
-            font-size: 2.5rem;
+            font-size: 3.5rem;
             font-weight: bold;
-            margin-bottom: 0.5rem;
-            text-shadow: 0 0 20px rgba(212, 175, 55, 0.8);
+            margin-bottom: 1rem;
+            text-shadow: 0 0 25px rgba(212, 175, 55, 0.9);
             animation: pulseGold 2s ease-in-out infinite;
         }
 
         .selection-text {
-            font-size: 1.2rem;
+            font-size: 1.4rem;
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 2px;
             opacity: 0.9;
-            text-shadow: 0 0 10px rgba(212, 175, 55, 0.5);
+            text-shadow: 0 0 15px rgba(212, 175, 55, 0.6);
+            padding: 0 1rem;
+            text-align: center;
         }
 
         .selection-progress {
@@ -1185,9 +1193,27 @@
             }
 
             .card-deck {
-                grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-                gap: 1rem;
-                padding: 1rem;
+                grid-template-columns: repeat(auto-fill, minmax(140px, 180px));
+                gap: 1.5rem;
+                padding: 2rem;
+                justify-content: center;
+            }
+
+            .oracle-card-back {
+                min-height: 210px;
+                max-width: 180px;
+            }
+
+            .card-symbol {
+                font-size: 3rem;
+            }
+
+            .selection-number {
+                font-size: 3rem;
+            }
+
+            .selection-text {
+                font-size: 1.2rem;
             }
 
             .reading-grid {
