Update print statement from 'Hello' to 'Goodbye'

--- a/members-new.html
+++ b/members-new.html
@@ -1315,90 +1315,93 @@
         <section class="navigation-section">
             <h3 class="section-title">Choose Your Sacred Path</h3>
             <div class="nav-grid">
-                <!-- Oracle & Divination -->
+                <!-- 1. Oracle & Divination -->
                 <div class="nav-card" onclick="showSectionWithLoading('oracle-divination')">
                     <span class="nav-icon">🔮</span>
                     <h4 class="nav-title">Oracle & Divination</h4>
                     <p class="nav-description">
-                        Divine guidance through sacred Oracle Cards, Tarot wisdom, and Rune casting.
+                        Divine guidance through Oracle Cards, Tarot, Runes, I-Ching, Angel Messages, Crystal Wisdom, and Astro Dice.
                     </p>
                     <div class="nav-features">
-                        <span class="feature-tag">Oracle Cards</span>
-                        <span class="feature-tag">Tarot</span>
-                        <span class="feature-tag">Runes</span>
+                        <span class="feature-tag">52 Oracle Cards</span>
+                        <span class="feature-tag">78 Tarot Cards</span>
+                        <span class="feature-tag">24 Runes</span>
+                        <span class="feature-tag">7 Systems</span>
                     </div>
                 </div>
 
-                <!-- Spiritual Practices -->
-                <div class="nav-card" onclick="showSectionWithLoading('spiritual-tools')">
+                <!-- 2. Spiritual Practices -->
+                <div class="nav-card" onclick="showSectionWithLoading('spiritual-practices')">
                     <span class="nav-icon">🧘</span>
                     <h4 class="nav-title">Spiritual Practices</h4>
                     <p class="nav-description">
-                        Meditation, energy healing, breathwork, and sacred sound practices.
+                        Daily meditation, breathwork, affirmations, prayer, journaling, and gratitude practices.
                     </p>
                     <div class="nav-features">
                         <span class="feature-tag">Meditation</span>
-                        <span class="feature-tag">Energy Healing</span>
-                        <span class="feature-tag">Sacred Arts</span>
+                        <span class="feature-tag">Breathwork</span>
+                        <span class="feature-tag">Prayer</span>
+                        <span class="feature-tag">Journal</span>
                     </div>
                 </div>
 
+                <!-- 3. Meditation & Mindfulness -->
                 <div class="nav-card" onclick="showSectionWithLoading('meditation-mindfulness')">
-                    <span class="nav-icon">🧘</span>
-                    <h3 class="nav-title">Meditation & Mindfulness</h3>
+                    <span class="nav-icon">🧘‍♀️</span>
+                    <h4 class="nav-title">Meditation & Mindfulness</h4>
                     <p class="nav-description">
-                        Find peace and inner wisdom through guided meditation and mindfulness practices.
+                        Guided meditation, chakra work, and mindfulness techniques for inner peace.
                     </p>
                     <div class="nav-features">
-                        <span class="feature-tag">Guided Meditation</span>
-                        <span class="feature-tag">Breathing Exercises</span>
-                        <span class="feature-tag">Chakra Work</span>
+                        <span class="feature-tag">Guided Sessions</span>
+                        <span class="feature-tag">Chakra Balance</span>
+                        <span class="feature-tag">Breathing</span>
                     </div>
-                    <div class="status-badge">✅ 6 Practices Ready</div>
                 </div>
 
+                <!-- 4. Energy & Healing -->
                 <div class="nav-card" onclick="showSectionWithLoading('energy-healing')">
                     <span class="nav-icon">⚡</span>
-                    <h3 class="nav-title">Energy & Healing</h3>
+                    <h4 class="nav-title">Energy & Healing</h4>
                     <p class="nav-description">
-                        Balance your energy centers and activate your natural healing abilities.
+                        Balance chakras, cleanse aura, and activate natural healing abilities.
                     </p>
                     <div class="nav-features">
-                        <span class="feature-tag">Chakra Balancing</span>
+                        <span class="feature-tag">Chakra Work</span>
                         <span class="feature-tag">Aura Cleansing</span>
                         <span class="feature-tag">Crystal Healing</span>
                     </div>
-                    <div class="status-badge">✅ 6 Modalities Ready</div>
                 </div>
 
+                <!-- 5. Sacred Arts & Sound -->
                 <div class="nav-card" onclick="showSectionWithLoading('sacred-arts-sound')">
                     <span class="nav-icon">🎨</span>
-                    <h3 class="nav-title">Sacred Arts & Sound</h3>
+                    <h4 class="nav-title">Sacred Arts & Sound</h4>
                     <p class="nav-description">
-                        Express your soul through divine creativity and healing vibrations.
+                        Express soul through divine creativity and healing sound vibrations.
                     </p>
                     <div class="nav-features">
-                        <span class="feature-tag">Mystic Arts Studio</span>
+                        <span class="feature-tag">Mystic Arts</span>
                         <span class="feature-tag">Sound Healing</span>
-                        <span class="feature-tag">Creative Expression</span>
+                        <span class="feature-tag">Mandalas</span>
                     </div>
-                    <div class="status-badge">✅ 6 Tools Ready</div>
                 </div>
 
+                <!-- 6. Devotion & Growth -->
                 <div class="nav-card" onclick="showSectionWithLoading('devotion-growth')">
                     <span class="nav-icon">🙏</span>
-                    <h3 class="nav-title">Devotion & Growth</h3>
+                    <h4 class="nav-title">Devotion & Growth</h4>
                     <p class="nav-description">
-                        Cultivate your sacred practice and spiritual development journey.
+                        Cultivate sacred practice and track spiritual development journey.
                     </p>
                     <div class="nav-features">
                         <span class="feature-tag">Daily Devotions</span>
-                        <span class="feature-tag">Spiritual Journal</span>
+                        <span class="feature-tag">Journal</span>
                         <span class="feature-tag">Growth Tracker</span>
                     </div>
-                    <div class="status-badge">✅ 6 Practices Ready</div>
                 </div>
 
+                <!-- 7. Sacred Knowledge -->
                 <div class="nav-card" onclick="showSectionWithLoading('sacred-knowledge')">
                     <span class="nav-icon">📚</span>
                     <h4 class="nav-title">Sacred Knowledge</h4>
@@ -1407,64 +1410,40 @@
                     </p>
                     <div class="nav-features">
                         <span class="feature-tag">Sacred Library</span>
-                        <span class="feature-tag">Wisdom</span>
+                        <span class="feature-tag">Wisdom Texts</span>
                         <span class="feature-tag">Teachings</span>
                     </div>
-                </a>
+                </div>
 
+                <!-- 8. Community & Service -->
                 <div class="nav-card" onclick="showSectionWithLoading('community')">
                     <span class="nav-icon">🤝</span>
-                    <h3 class="nav-title">Community & Service</h3>
+                    <h4 class="nav-title">Community & Service</h4>
                     <p class="nav-description">
-                        Connect with fellow practitioners and contribute to sacred service.
+                        Connect with practitioners and contribute to sacred service.
                     </p>
                     <div class="nav-features">
                         <span class="feature-tag">Sacred Circle</span>
-                        <span class="feature-tag">Community Hub</span>
-                        <span class="feature-tag">Service Projects</span>
+                        <span class="feature-tag">Community</span>
+                        <span class="feature-tag">Service</span>
                     </div>
-                    <div class="status-badge">✅ 3 Features Ready</div>
                 </div>
 
-                <div class="nav-card" onclick="showSectionWithLoading('community')">
-                    <span class="nav-icon">🤝</span>
-                    <h3 class="nav-title">Community & Service</h3>
-                    <p class="nav-description">
-                        Connect with fellow practitioners and contribute to sacred service.
-                    </p>
-                    <div class="nav-features">
-                        <span class="feature-tag">Sacred Circle</span>
-                        <span class="feature-tag">Community Hub</span>
-                        <span class="feature-tag">Service Projects</span>
-                    </div>
-                    <div class="status-badge">✅ 3 Features Ready</div>
-                </div>
-
+                <!-- 9. Sacred Calendar -->
                 <div class="nav-card" onclick="showSectionWithLoading('calendar')">
                     <span class="nav-icon">📅</span>
-                    <h3 class="nav-title">Sacred Calendar</h3>
+                    <h4 class="nav-title">Sacred Calendar</h4>
                     <p class="nav-description">
-                        Track celestial events, moon phases, and optimal times for spiritual practice.
+                        Track moon phases, celestial events, and optimal spiritual timing.
                     </p>
                     <div class="nav-features">
                         <span class="feature-tag">Moon Phases</span>
-                        <span class="feature-tag">Celestial Events</span>
-                        <span class="feature-tag">Sacred Timing</span>
+                        <span class="feature-tag">Celestial</span>
+                        <span class="feature-tag">Timing</span>
                     </div>
-                    <div class="status-badge">✅ 3 Features Ready</div>
                 </div>
-                    <p class="nav-description">
-                        Enoch Calendar system with Hebrew months and daily devotional tracking.
-                    </p>
-                    <div class="nav-features">
-                        <span class="feature-tag">364-Day Calendar</span>
-                        <span class="feature-tag">Hebrew Months</span>
-                        <span class="feature-tag">Devotions</span>
-                    </div>
-                </a>
             </div>
         </section>
-    </div>
 
     <!-- Section Container for Loading External Pages -->
     <div id="section-container" style="display: none;">
@@ -3685,3 +3664,4 @@
     </script>
 </body>
 </html>
+
