Update print statement from 'Hello' to 'Goodbye'

--- a/members-new.html
+++ b/members-new.html
@@ -2073,32 +2073,28 @@
         }
 
         const sectionMap = {
-            'oracle-divination': 'sections/oracle-divination.html',
-            'meditation-mindfulness': 'sections/meditation-mindfulness.html',
-            'energy-healing': 'sections/energy-healing.html',
-            'sacred-arts-sound': 'sections/sacred-arts-sound.html',
-            'devotion-growth': 'sections/devotion-growth.html',
-            'advanced-practices': 'sections/advanced-practices.html',
-            'spiritual-tools': 'sections/spiritual-tools.html',
-            'sacred-knowledge': 'sections/sacred-knowledge.html',
-            'personal-growth': 'sections/personal-growth.html',
-            'community': 'sections/community.html',
-            'calendar': 'sections/calendar.html'
-        };
+    'oracle-divination': 'sections/oracle-divination.html',
+    'spiritual-practices': 'sections/spiritual-practices.html',  // ✅ FIXED
+    'meditation-mindfulness': 'sections/meditation-mindfulness.html',
+    'energy-healing': 'sections/energy-healing.html',
+    'sacred-arts-sound': 'sections/sacred-arts-sound.html',
+    'devotion-growth': 'sections/devotion-growth.html',
+    'sacred-knowledge': 'sections/sacred-knowledge.html',
+    'community': 'sections/community.html',
+    'calendar': 'sections/calendar.html'
+};
 
-        const sectionTitles = {
-            'oracle-divination': 'Oracle & Divination',
-            'meditation-mindfulness': 'Meditation & Mindfulness',
-            'energy-healing': 'Energy & Healing',
-            'sacred-arts-sound': 'Sacred Arts & Sound',
-            'devotion-growth': 'Devotion & Growth',
-            'advanced-practices': 'Advanced Practices',
-            'spiritual-tools': 'Spiritual Tools & Practices',
-            'sacred-knowledge': 'Sacred Knowledge & Wisdom',
-            'personal-growth': 'Personal Growth & Development',
-            'community': 'Community & Service',
-            'calendar': 'Sacred Calendar System'
-        };
+const sectionTitles = {
+    'oracle-divination': 'Oracle & Divination',
+    'spiritual-practices': 'Spiritual Practices',  // ✅ FIXED
+    'meditation-mindfulness': 'Meditation & Mindfulness',
+    'energy-healing': 'Energy & Healing',
+    'sacred-arts-sound': 'Sacred Arts & Sound',
+    'devotion-growth': 'Devotion & Growth',
+    'sacred-knowledge': 'Sacred Knowledge',
+    'community': 'Community & Service',
+    'calendar': 'Sacred Calendar'
+};
 
         function showSection(sectionId) {
             console.log('📂 Opening section:', sectionId);
@@ -3664,4 +3660,5 @@
     </script>
 </body>
 </html>
+
 
