--- a/about-nazir.html
+++ b/about-nazir.html
@@ -651,7 +651,8 @@
                 <p style="margin-bottom: 1.5rem;">
                     Born as <strong>Carlton Patrick Beverly</strong>, my earthly name carries profound meaning woven into the fabric of destiny. 
                     <em>Carlton</em> — derived from "freeman's town" or "settlement of free men" — speaks to liberation, 
-                    community, and the gathering of sovereign souls.
+                    community, and the gathering of sovereign souls. <em>Beverly</em> — meaning "beaver stream" or "meadow near the stream" — 
+                    represents the flow of divine wisdom, industrious purpose, and life-giving spiritual nourishment.
                 </p>
                 <p style="margin-bottom: 1.5rem;">
                     <em>Patrick</em>, meaning <strong>"noble"</strong> or <strong>"patrician"</strong>, 
@@ -674,9 +675,10 @@
                     Through divine revelation and spiritual awakening, I received my sacred name: <strong>NAZIR EL</strong>.
                 </p>
                 <p style="margin-bottom: 1.5rem;">
-                    <strong>NAZIR</strong> — One who is consecrated, set apart, dedicated to divine purpose. 
+                    <strong>NAZIR</strong> — Overseer, inspector, helper. One who is consecrated, set apart, dedicated to divine purpose. 
                     In Hebrew tradition, a Nazir is one who takes a vow of separation unto the Most High, 
-                    abstaining from worldly distractions to walk in spiritual purity and power.
+                    abstaining from worldly distractions to walk in spiritual purity and power. At age 21, I became a Nazarite, 
+                    taking this sacred vow to serve the divine mission.
                 </p>
                 <p style="margin-bottom: 1.5rem;">
                     <strong>EL</strong> — The ancient name of the Divine, meaning "God" or "The Mighty One." 
